fixed several instrument issues